030-software/fluxcd/apps/pairdrop/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pairdrop
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: pairdrop
  template:
    metadata:
      labels:
        app: pairdrop
        policy.gatekeeper.sh/ignore: "true"
        # policy.gatekeeper.sh/ignore-psp-volume-types: "true"
    spec:
      automountServiceAccountToken: false
      securityContext:
        # runAsNonRoot: true
        # runAsUser: 1000
        # runAsGroup: 1000
        # fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: pairdrop
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: pairdrop
      containers:
        - name: pairdrop
          image: lscr.io/linuxserver/pairdrop:1.11.2
          # image: busybox:1.38
          # args: ["busybox", "httpd", "-f", "-v", "-p", "8080"]
          # workingDir: /assets
          # securityContext:
          #   allowPrivilegeEscalation: false
          #   readOnlyRootFilesystem: true
          #   runAsNonRoot: true
          #   capabilities:
          #     drop:
          #       - ALL
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 100m
            limits:
              memory: 64Mi
      #     volumeMounts:
      #       - name: assets
      #         mountPath: /assets
      #         subPath: app/pairdrop/public
      # volumes:
      #   - name: assets
      #     image:
      #       reference: lscr.io/linuxserver/pairdrop:1.11.2
      #       pullPolicy: Always
